cargo-workspaces/tests/snapshots/exec__normal-2.snap
---
source: tests/exec.rs
expression: out
---
[package]
name = "dep1"
version = "0.1.0"
authors = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
edition = "2018"
description = "dep1"
license = "MIT"

[dependencies]
[package]
name = "dep2"
version = "0.1.0"
authors = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
edition = "2018"
description = "dep2"
license = "MIT"

[dependencies]
pre_dep1 = { version = "0.1.0", path = "../dep1", package = "dep1" }
[package]
name = "top"
version = "0.1.0"
authors = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
edition = "2018"
description = "top"
license = "MIT"

[dependencies]
dep = { version = "0.1.0", path = "../dep1", package = "dep1" }
dep2 = { version = "0.1.0", path = "../dep2" }

